# UTAML

./: .gitignore  README.md  pyproject.toml  taml.yaml
src/: parquet_prep.py  prqt2ml.py  pyparquet.py  readParquet.py  root2parquet.py  root_ipython.py
