[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utaml"
version = "1.0.0"
dependencies = [
    "awkward>=2.6.10",
    "pyarrow>=10.0",
    "uproot>=5.0",
    "numpy>=1.21",
    "colorlog>=6.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
hdf5 = ["h5py"]

[project.scripts]
root2parquet = "rt2npz:main"
parquet-prep = "prqt2ml:main"
parquet-split = "readParquet:main"
pyparquet = "pyparquet:main"
