[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utaml"
version = "1.0.0"
dependencies = [
    "awkward>=2.6.10",
    "pyarrow>=10.0",
    "uproot>=5.0",
    "numpy>=1.21",
    "colorlog>=6.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
hdf5 = ["h5py"]

[project.scripts]
root2parquet = "root2parquet:main"
parquet-prep = "parquet-prep:main"
parquet-split = "parquet-split:main"
pyparquet = "pyparquet:main"
